--- a/Projects/advertising/css/custom.css
+++ b/Projects/advertising/css/custom.css
@@ -181,3 +181,32 @@ a{
   .page{
       margin: 0 auto;
   }
+
+  .accord-head{
+      background-color: rgba(146, 134, 134, 0.199);
+      color: #000;
+  }
+
+
+  .accord-body{
+    background-color: rgba(255, 255, 255, 0.911);
+}
+
+blockquote{
+    border-right: 7px solid #557799;
+    border-left: none;
+}
+
+.prev-post{
+    margin: 0 auto;
+}
+
+.writer{
+    width: 99%;
+    margin-right: 10px;
+}
+
+.writer h5{
+    color: #111;
+    font-weight: 800;
+}
